[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/LoadGame.gd" type="Script" id=2]
[ext_resource path="res://UI/SaveFile.tscn" type="PackedScene" id=3]

[node name="LoadGame" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ThemedMarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -55.0
margin_right = 241.0
margin_bottom = 55.0
rect_min_size = Vector2( 481, 110 )
rect_pivot_offset = Vector2( 240, 55 )
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="ThemedMarginContainer"]
margin_right = 481.0
margin_bottom = 110.0

[node name="MarginContainer" type="MarginContainer" parent="ThemedMarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 477.0
margin_bottom = 106.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ThemedMarginContainer/PanelContainer/MarginContainer"]
margin_right = 473.0
margin_bottom = 102.0
custom_constants/separation = 10

[node name="SaveFile" parent="ThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 3 )]

[node name="SaveFile2" parent="ThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 161.0
margin_right = 312.0

[node name="SaveFile3" parent="ThemedMarginContainer/PanelContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 322.0
margin_right = 473.0
